tests/testdata/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: all
spec:
  # DNS name, prefix wildcard, short name relative to context
  # IP or CIDR only for services in gateways
  name: service3.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 99
        connectTimeout: 6s
      http:
        http2MaxRequests: 33
        maxRequestsPerConnection: 65
        maxRetries: 4
        http1MaxPendingRequests: 14
    outlierDetection:
        http:
          consecutiveErrors: 7
          interval: 8ms
          baseEjectionTime: 1m
          maxEjectionPercent: 11
    tls:
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
        version: v3
      trafficPolicy:
        loadBalancer:
          consistentHash:
            http_header: Cookie
            minimumRingSize: 42
