tests/testdata/destination-rule-ssl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: drprefix
spec:
  host: "h.webinf.info"
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: MUTUAL
      clientCertificate: myCertFile.pem
      privateKey: myPrivateKey.pem
      # If omitted, no verification !!! ( can still be verified by receiver ??)
      caCertificates: myCA.pem
      sni: my.sni.com
      subjectAltNames:
      - foo.alt.name
