tests/testdata/envoy_local1.json
{
  "stats_config": {
    "use_all_default_tags": false
  },
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": 17000
      }
    }
  },
  "dynamic_resources": {
    "lds_config": {
      "api_config_source": {
        "api_type": "REST_LEGACY",
        "refresh_delay": {
          "seconds": 30,
          "nanos": 0
        },
        "cluster_names": [
          "rds"
        ]
      }
    },
    "cds_config": {
      "api_config_source": {
        "api_type": "REST_LEGACY",
        "refresh_delay": {
          "seconds": 30,
          "nanos": 0
        },
        "cluster_names": [
          "rds"
        ]
      }
    },
    "deprecated_v1": {
      "sds_config": {
        "api_config_source": {
          "api_type": "GRPC",
          "refresh_delay": {
            "seconds": 30,
            "nanos": 0
          },
          "cluster_names": [
            "xds-grpc"
          ]
        }
      }
    }
  },
  "static_resources": {
    "listeners": [
      {
        "name": "legacy15003",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17003
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "legacy15003",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "pilot_http"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "name": "iptables",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17001
          }
        },
        "use_original_dst": {
          "value": true
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "stat_prefix": "iptables"
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.listener.original_dst"
          }
        ]
      },
      {
        "name": "http_proxy",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17002
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "http_proxy",
                  "http_filters": [
                    {
                      "name": "envoy.router"
                    }
                  ],
                  "route_config": {
                  },
                  "http_protocol_options": {
                    "allow_absolute_url": true
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "name": "http_80",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17080
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "http80",


                  "route_specifier": {
                    "rds": {
                      "config_source": {

                        "path": "/tmp/rds"

                        "config_source_specifier": {
                        }
                      },
                      "route_config_name": "80"
                    }
                  }
                }
              }

            ]
          }
        ]
      },
      {
        "name": "httpproxy",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17008
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "legacy15003",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "pilot_http"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "name": "grpc15011",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17011
          }
        },
        "filter_chains": [
          {
            "tls_context": {
              "common_tls_context": {
                "tls_certificates": [
                  {
                    "certificate_chain": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIIDTzCCAjegAwIBAgIQZX1drhMeXBTU+dhaKckP5TANBgkqhkiG9w0BAQsFADBZ\nMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTESMBAGA1UEBxMJU3Vu\nbnl2YWxlMQ4wDAYDVQQKEwVJc3RpbzERMA8GA1UEAxMISXN0aW8gQ0EwHhcNMTgw\nMzEwMDUwMDE2WhcNMTkwMzEwMDUwMDE2WjATMREwDwYDVQQKEwhKdWp1IG9yZzCC\nASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAMIuHhv/cBdge+gH0VXJDgCF\n7NE8byK/0DlrWn5leewWBFDF7PsVOcEzXUd7qsGKcJ8qrK4o2Qy+myL8TEFjL/8c\nfCimVCcjxNa1nc0A+oA9fQBS8AHhKS1aCbQ [...]
                    },
                    "private_key": {
                      "inline_string": "-----BEGIN RSA PRIVATE KEY-----\nMIIEowIBAAKCAQEAwi4eG/9wF2B76AfRVckOAIXs0TxvIr/QOWtafmV57BYEUMXs\n+xU5wTNdR3uqwYpwnyqsrijZDL6bIvxMQWMv/xx8KKZUJyPE1rWdzQD6gD19AFLw\nAeEpLVoJtAkiGmShgqp4uU/6pcOEZTxH8Sxg8oz+huKy3hufoxMg+xUM7h5vVsYt\n0KlKzAWmkW9PRifoifQIf+ysKqkkF3ZWnsjkqEPrkxId8TbvNxvd+IY0iDNfviLN\nl4HH0lG4a9NjePtXKMDidx+d4bWbsPCuI218VarjwdaiVdxBU7Y7SzZPMqQO3Fne\nk1S+aJ0wrlqv9D/soeXtsRAyFWOliJmhZMBBywIDAQABAoIBAF5znEW2HEnirqKQ\nmuyFXYA3pJeqM8zNTHWBmIT+yy1hEDx [...]
                    }
                  }
                ],
                "validation_context": {
                  "trusted_ca": {
                    "filename": "./security/samples/plugin_ca_certs/cert-chain.pem"
                  }
                }
              },
              "require_client_certificate": true
            },
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "grpc15011",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "pilot_grpc"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "rds",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17007
            }
          }
        ]
      },
      {
        "name": "xds-grpc",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17010
            }
          }
        ],
        "http2_protocol_options": {}
      },
      {
        "name": "pilot_http",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17007
            }
          }
        ],
        "http2_protocol_options": {}
      },
      {
        "name": "pilot_grpc",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17010
            }
          }
        ]
      }
    ]
  }
}
