tests/testdata/gateway-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: all
spec:
  selector:
    app: my-gatweway-controller
  servers:
  - port:
      number: 80
      name: http
    hosts:
    - uk.bookinfo.com
    - eu.bookinfo.com
    tls:
      httpsRedirect: true # sends 302 redirect for http requests
  - port:
      number: 443
      name: https
    hosts:
    - uk.bookinfo.com
    - eu.bookinfo.com
    tls:
      mode: simple #enables HTTPS on this port
      serverCertificate: /etc/certs/servercert.pem
      privateKey: /etc/certs/privatekey.pem
#  - port:
#      number: 9080
#      name: http-wildcard
      # no hosts implies wildcard match
