tests/testdata/rule-weighted-route.yaml
# Self-contained local test for weighted routes
# TODO: start services/template for the 2 ports.
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: weighted-extsvc
spec:
   hosts:
   - c-weighted.extsvc.com
   ports:
   - number: 9001
     name: http
     protocol: HTTP
   discovery: STATIC
   endpoints:
    - address: 127.0.0.2
      ports:
        http: 8080
      labels:
        version: v1
    - address: 127.0.0.3
      ports:
        http: 8081
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c-weighted
spec:
  host: c-weighted.extsvc.com
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c-weighted
spec:
  hosts:
    - c-weighted.extsvc.com
  http:
    - route:
      - destination:
          host: c-weighted.extsvc.com
          subset: v1
        weight: 75
      - destination:
          host: c-weighted.extsvc.com
          subset: v2
        weight: 25
